--- a/food-image-classification1.ipynb
+++ b/food-image-classification1.ipynb
@@ -683,7 +683,7 @@
     "\n",
     "input_data = preprocess('data/apple-pie/3068872.jpg')\n",
     "\n",
-    "lists = img_numpy.tolist()\n",
+    "lists = input_data.tolist()\n",
     "#convert input data into JSON string \n",
     "json_str = json.dumps(lists)\n",
     "# deserializes sample to a python object \n",
