--- a/food-image-classification.ipynb
+++ b/food-image-classification.ipynb
@@ -489,6 +489,7 @@
     "def run(request):\n",
     "    img = open_image(request)\n",
     "    prediction = food_classification_model.predict(img)\n",
+    "    index = 0\n",
     "    pred = str(prediction[0])\n",
     "    print(pred)\n",
     "    return pred\n",
