--- a/food-image-classification.ipynb
+++ b/food-image-classification.ipynb
@@ -490,7 +490,7 @@
     "    img = open_image(request)\n",
     "    prediction = food_classification_model.predict(img)\n",
     "    index = 0\n",
-    "    pred = str(prediction[0])\n",
+    "    pred = str(prediction[index])\n",
     "    print(pred)\n",
     "    return pred\n",
     "\n",
